--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<a href="#" onclick="login()">Spotify Login</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script type="text/javascript" src="js/script.js"></script>
+    <title>Spotify Breadcrumbs Mix</title>
+    <link rel="icon" type="image/x-icon" href="img/Spotify_Icon_RGB_Green.ico">
+</head>
+<body>
+    <a class="button" href="#" onclick="login()">Spotify Login</a>
+</body>
+</html>
