--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" type="image/x-icon" href="img/Spotify_Icon_RGB_Green.ico">
 </head>
 <body>
-    <a class="button" href="#" onclick="login()">Spotify Login</a>
+    <a href="#" onclick="login()">Spotify Login</a>
+    <a href="https://joshcanton6.github.io" target="_blank">Website</a>
+    <a href="https://buymeacoffee.com/joshcanton6" target="_blank">Buy Me a Coffee</a>
+    <a href="mailto:joshcanton6+breadcrumbs@gmail.com" target="_blank">Contact</a>
 </body>
 </html>
