--- a/redirect.html
+++ b/redirect.html
@@ -9,6 +9,6 @@
     <link rel="icon" type="image/x-icon" href="img/Spotify_Icon_RGB_Green.ico">
 </head>
 <body onload="redirect()">
-    <h1 id="redirect_message"></h1>
+    <p id="redirect-message"></p>
 </body>
 </html>
