--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/spotify.js"></script>
     <title>Spotify Breadcrumbs Mix</title>
     <link rel="icon" type="image/x-icon" href="img/Spotify_Icon_RGB_Green.ico">
 </head>
