--- a/app.html
+++ b/app.html
@@ -10,6 +10,6 @@
     <link rel="icon" type="image/x-icon" href="img/Spotify_Icon_RGB_Green.ico">
 </head>
 <body>
-    
+    <a href="#" onclick="testButton()">Debug</a>
 </body>
 </html>
