--- a/app.html
+++ b/app.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript" src="js/spotify.js"></script>
+    <script type="module" src="js/script.js"></script>
     <title>Spotify Breadcrumbs Mix</title>
     <link rel="icon" type="image/x-icon" href="img/Spotify_Icon_RGB_Green.ico">
 </head>
