--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <script type="module" src="js/script.js"></script>
+    <script type="module" src="js/main.js"></script>
     <title>Spotify Breadcrumbs Mix</title>
     <link rel="icon" type="image/x-icon" href="img/Spotify_Icon_RGB_Green.ico">
 </head>
 <body>
-    <a href="#" onclick="login()">Spotify Login</a>
+    <button id="spotify-login-button">Spotify Login</button>
     <a href="https://joshcanton6.github.io" target="_blank">Website</a>
     <a href="https://buymeacoffee.com/joshcanton6" target="_blank">Buy Me a Coffee</a>
     <a href="mailto:joshcanton6+breadcrumbs@gmail.com" target="_blank">Contact</a>
