--- a/redirect.html
+++ b/redirect.html
@@ -8,7 +8,7 @@
     <title>Redirect</title>
     <link rel="icon" type="image/x-icon" href="img/Spotify_Icon_RGB_Green.ico">
 </head>
-<body onload="redirect()">
+<body>
     <p id="redirect-message"></p>
 </body>
 </html>
