--- a/app.html
+++ b/app.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="img/Spotify_Icon_RGB_Green.ico">
 </head>
 <body>
-    <a href="#" onclick="testButton()">Debug</a>
-    <p id="data"></p>
+    <button id="debug-button">Debug</a>
+    <p id="debug-data"></p>
 </body>
 </html>
