--- a/app.html
+++ b/app.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script type="module" src="js/main.js"></script>
     <title>Spotify Breadcrumbs Mix</title>
-    <link rel="icon" type="image/x-icon" href="img/Spotify_Icon_RGB_Green.ico">
+    <link rel="icon" type="image/x-icon" href="img/slice.ico">
 </head>
 <body>
     <button id="debug-button">Debug</button>
