--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script type="module" src="js/main.js"></script>
     <title>Spotify Breadcrumbs Mix</title>
-    <link rel="icon" type="image/x-icon" href="img/Spotify_Icon_RGB_Green.ico">
+    <link rel="icon" type="image/x-icon" href="img/slice.ico">
 </head>
 <body>
+    <h1>Breadcrumbs (A Spotify Web Mix)</h1>
     <button id="spotify-login-button">Spotify Login</button>
     <a href="https://joshcanton6.github.io" target="_blank">Website</a>
     <a href="https://buymeacoffee.com/joshcanton6" target="_blank">Buy Me a Coffee</a>
