--- a/app.html
+++ b/app.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script type="module" src="js/main.js"></script>
-    <title>Spotify Breadcrumbs Mix</title>
+    <title>Breadcrumbs | Home</title>
     <link rel="icon" type="image/x-icon" href="img/slice.ico">
 </head>
 <body>
