--- a/index.html
+++ b/index.html
@@ -9,23 +9,21 @@
     <title>Breadcrumbs | A Spotify Web Mix</title>
     <link rel="icon" type="image/x-icon" href="img/slice.ico">
 </head>
-<body>
-    <div id="start-page">
-        <img src="img/breadcrumbs_cover_image.jpg" alt="Breadcrumbs playlist cover image" width="40%">
-        <h1>Breadcrumbs (A Spotify Web Mix)</h1>
-        <button id="spotify-login-button">Spotify Login</button>
-        <p>Breadcrumbs is a Spotify web application that helps you discover new music tailored to your preferences. Using your recent top artists, as well as other artists you already know and love, Breadcrumbs builds a collection of tracks for you. Perfect for exploring new music from your favorite artists or discovering under-the-radar hits!</p>
-        <h2>How It Works</h2>
-        <ol>
-            <li><b>Analyze Your Top Artists:</b> It starts by finding the artists you listen to the most, and gathers the music released by them. Find hidden gems or fresh beats!</li>
-            <li><b>Customize Your Search:</b> You can choose a playlist to add more artists to the mix. Every artist in the selected playlist will be included in your search.</li>
-            <li><b>Optional Filters:</b> Narrow down the selection of tracks to cater more to your listening needs. Want to choose certain artists? Only show popular songs? Maybe newest hits?</li>
-        </ol>
-        <h2>Get Started</h2>
-        <p>Connect your Spotify account to allow Breadcrumbs to analyze your listening history. Breadcrumbs offers a seamless way to discover new tracks that align with your tastes. By leveraging your listening history and saved songs, it curates a musical journey for you, built on the artists you've already come to enjoy!</p>
-        <a href="https://joshcanton6.github.io" target="_blank">Website</a>
-        <a href="https://buymeacoffee.com/joshcanton6" target="_blank">Buy Me a Coffee</a>
-        <a href="mailto:joshcanton6+breadcrumbs@gmail.com" target="_blank">Contact</a>
-    </div>
+<body id="start-page">
+    <img src="img/breadcrumbs_cover_image.jpg" alt="Breadcrumbs playlist cover image" width="40%">
+    <h1>Breadcrumbs (A Spotify Web Mix)</h1>
+    <button id="spotify-login-button">Spotify Login</button>
+    <p>Breadcrumbs is a Spotify web application that helps you discover new music tailored to your preferences. Using your recent top artists, as well as other artists you already know and love, Breadcrumbs builds a collection of tracks for you. Perfect for exploring new music from your favorite artists or discovering under-the-radar hits!</p>
+    <h2>How It Works</h2>
+    <ol>
+        <li><b>Analyze Your Top Artists:</b> It starts by finding the artists you listen to the most, and gathers the music released by them. Find hidden gems or fresh beats!</li>
+        <li><b>Customize Your Search:</b> You can choose a playlist to add more artists to the mix. Every artist in the selected playlist will be included in your search.</li>
+        <li><b>Optional Filters:</b> Narrow down the selection of tracks to cater more to your listening needs. Want to choose certain artists? Only show popular songs? Maybe newest hits?</li>
+    </ol>
+    <h2>Get Started</h2>
+    <p>Connect your Spotify account to allow Breadcrumbs to analyze your listening history. Breadcrumbs offers a seamless way to discover new tracks that align with your tastes. By leveraging your listening history and saved songs, it curates a musical journey for you, built on the artists you've already come to enjoy!</p>
+    <a href="https://joshcanton6.github.io" target="_blank">Website</a>
+    <a href="https://buymeacoffee.com/joshcanton6" target="_blank">Buy Me a Coffee</a>
+    <a href="mailto:joshcanton6+breadcrumbs@gmail.com" target="_blank">Contact</a>
 </body>
 </html>
