--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="img/slice.ico">
 </head>
 <body id="start-page">
-    <img src="img/breadcrumbs_cover_image.jpg" alt="Breadcrumbs playlist cover image" width="40%">
+    <img src="img/breadcrumbs_cover_image.jpg" alt="Breadcrumbs playlist cover image" width="40%" class="rounded">
     <h1>Breadcrumbs (A Spotify Web Mix)</h1>
     <button id="spotify-login-button">Spotify Login</button>
     <p>Breadcrumbs is a Spotify web application that helps you discover new music tailored to your preferences. Using your recent top artists, as well as other artists you already know and love, Breadcrumbs builds a collection of tracks for you. Perfect for exploring new music from your favorite artists or discovering under-the-radar hits!</p>
