--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="img/slice.ico">
 </head>
 <body>
-    <div id="#start-page-content">
+    <div id="start-page-content">
         <img src="img/breadcrumbs_cover_image.jpg" alt="Breadcrumbs playlist cover image" width="40%" class="rounded">
         <h1>Breadcrumbs (A Spotify Web Mix)</h1>
         <button id="spotify-login-button">Spotify Login</button>
