Update start page
Changes to image & start page classes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div id="start-page-content">
-        <img src="img/breadcrumbs_cover_image.jpg" alt="Breadcrumbs playlist cover image" width="40%" class="rounded">
+        <img src="img/breadcrumbs_cover_image.jpg" alt="Breadcrumbs playlist cover image" class="img-large">
         <h1>Breadcrumbs (A Spotify Web Mix)</h1>
         <button id="spotify-login-button">Spotify Login</button>
         <p>Breadcrumbs is a Spotify web application that helps you discover new music tailored to your preferences. Using your recent top artists, as well as other artists you already know and love, Breadcrumbs builds a collection of tracks for you. Perfect for exploring new music from your favorite artists or discovering under-the-radar hits!</p>
