--- a/app.html
+++ b/app.html
@@ -9,6 +9,9 @@
     <link rel="icon" type="image/x-icon" href="img/slice.ico">
 </head>
 <body>
-    
+    <div id="app-content">
+        <h2>Your Recent Hot Artists</h2>
+        <table id="top-artists"></table>
+    </div>
 </body>
 </html>
