--- a/redirect.html
+++ b/redirect.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/index.js"></script>
     <title>Redirect</title>
     <link rel="icon" type="image/x-icon" href="img/slice.ico">
 </head>
